--- a/RealestatePhotography/src/main/webapp/WEB-INF/web.xml
+++ b/RealestatePhotography/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+	version="4.0">
 
-    <display-name>Spring MVC Application</display-name>
+	<display-name>Spring MVC Application</display-name>
 
-    <!-- Spring DispatcherServlet -->
-    <servlet>
-        <servlet-name>web</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
+	<!-- Spring DispatcherServlet -->
+	<servlet>
+		<servlet-name>web</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-    <servlet-mapping>
-        <servlet-name>web</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>web</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>servicePage</servlet-name>
+		<jsp-file>/WEB-INF/views/service.jsp</jsp-file>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>servicePage</servlet-name>
+		<url-pattern>/service</url-pattern>
+	</servlet-mapping>
 
 </web-app>
